[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "covseisnet"
version = "0.1.1"
description = "Covariance matrix analysis of network seismic data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12, <4"
authors = [{ name = "Leonard Seydoux" }]
keywords = ["covariance", "data", "seismic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "numpy",
    "obspy",
    "scipy",
    "cartopy",
    "ipython",
    "matplotlib",
    "pytest",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_book_theme",
    "sphinx_gallery",
    "sphinxcontrib-bibtex",
    "sphinx_new_tab_link",
]

[tool.hatch.version]
path = "covseisnet/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["covseisnet/**", "README.md", "LICENSE", "tests/**"]
exclude = ["docs/**", "data/**", "examples/**"]

[tool.hatch.build.targets.sdist.options]
force-include = ["docs/**", "data/**"]

[tool.pytest.ini_options]
minversion = "8.0"
xfail_strict = true
filterwarnings = ["ignore::DeprecationWarning"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.hatch.envs.dev]
dependencies = ["check-manifest"]

[tool.hatch.envs.test]
dependencies = ["coverage"]
